# 2110682-iot-rz-cmake

./: .gitignore  README.md
iot-rz/archived/: ana-s.txt  coop.txt  count-int2.txt  countsw.txt  demo-ana.txt  ecount-s.txt  in-s.lis  input-s.txt  input.lis  intrz.txt  m.txt  max-s.txt  max2-s.txt  mos-rz.txt  mos-s.lis  mos-s.txt  mos2.txt  out-s.lis  out-s.txt  print.txt  quick-s.txt  readport12-s2.txt  sem-rz.txt  simple-int.txt  sin3.txt
iot-rz/as21/: as21.c  as21.h  hash.c
iot-rz/doc/: as21-sim21-update-15feb2017.txt  asm-s21.txt  iot-board-io.txt  iot-rz-explain.txt  mon-c.txt  mos-data-queue.txt  reader-writer.txt  s21i-explain.txt  tswitch.txt
iot-rz/example/alloc/: alloc-s.lis  alloc-s.txt  alloc.txt
iot-rz/example/ana/: ana-s.lis  ana-s.txt  ana.txt
iot-rz/example/ana2/: ana2-s.lis  ana2-s.txt  ana2.txt
iot-rz/example/bubble/: bubble-s.lis  bubble-s.txt  bubble.txt
iot-rz/example/char/: char-s.lis  char-s.txt
iot-rz/example/chrono/: chrono-s.lis  chrono-s.txt  chrono.txt
iot-rz/example/coop/: coop-s.lis  coop.lis
iot-rz/example/count-int/: count-int.lis  count-int.txt
iot-rz/example/count-int2/: count-int2-s.txt  count-int2.lis
iot-rz/example/countsw/: countsw.lis
iot-rz/example/demo-ana/: demo-ana-s.lis  demo-ana-s.txt
iot-rz/example/demo-int/: demo-int.lis
iot-rz/example/demo-ptr/: demo-ptr-s.lis  demo-ptr-s.txt
iot-rz/example/demo-rz/: demo-rz-s.lis  demo-rz-s.txt
iot-rz/example/ecount/: ecount-s.lis  ecount-s.txt  ecount.txt
iot-rz/example/fac/: fac-s.lis  fac-s.txt
iot-rz/sim21/: io.c  load.c  mon.c  s21.c  s21.h
iot-rz/test/: count-int.txt  demo-int.txt  demo-ptr.txt  demo-rz.txt  in-s.txt  input.txt  inrz.txt  int-test.txt  matmul2.txt  max.txt  mos.txt  mos2.lis  pointer-s.txt  port.txt  readport-s.txt  readport.txt  readport12-rz.txt  rw-rz.txt  simple-int-s.txt  tswitch.txt  twocnt.txt  wr-s.lis  wr-s.txt
iot-rz/tools/as21/: CMakeLists.txt
iot-rz/tools/as21/src/: as21.c
iot-rz/tools/as21/unused/: as21.prj
iot-rz/tools/rz36-2/: CMakeLists.txt
iot-rz/tools/rz36-2/doc/: genbop-complex-c.txt  gencode - Copy.c  gencode-break-c.txt
iot-rz/tools/rz36-2/include/: parse.h
iot-rz/tools/rz36-2/src/: compile.c  parse.c
iot-rz/tools/sim21/: CMakeLists.txt
iot-rz/tools/sim21/include/: s21.h
iot-rz/tools/sim21/src/: io.c  load.c  mon.c  s21.c
iot-rz/tools/sim21/unused/: sim21.prj
(+63 files in other folders)
